# PdfProcessor

./: .gitignore  Dockerfile  README.md  justfile  main.py  pyproject.toml
.github/workflows/: pytest.yml
app/: __init__.py  api.py  config.py  exceptions.py  models.py  pdf_processor.py
attached_assets/: Pasted-Project-Overview-Develop-a-small-clean-REST-API-using-FastAPI-to-process-PDFs-from-provided-URLs-1753958033304_1753958033305.txt
tests/: __init__.py  test_api.py  test_pdf_processor.py
